--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -64,3 +64,23 @@
 input[type="submit"].bg-blue {
     display:block; margin:0 auto;
 }
+
+/*HEX #00DFFC*/
+/*RGB 0,223,252*/
+
+/*HEX #1FF89E*/
+/*RGB 31,248,158*/
+
+/*body {*/
+/*    font-family: 'Quicksand', sans-serif;*/
+/*    font-family: 'Alegreya', serif;*/
+/*}*/
+
+/*h1  {*/
+/*    color: #1FF89E;*/
+/*}*/
+
+/*h2 {*/
+/*    color: #00DFFC;*/
+/*}*/
+
