fixing some formatting

--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -1,3 +1,13 @@
-.logoname {
+body {
+    font-family: 'Quicksand', serif;
+}
+
+#logoname {
+    /*font-family: 'Quicksand', serif;*/
     font-family: 'Alegreya', serif;
+
+}
+
+.app-logo {
+
 }
