--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -17,3 +17,10 @@ body {
     animation-delay: 0;
     animation-iteration-count: infinite;
 }
+
+#post-body {
+    white-space: nowrap;
+    width: 100ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
